assets/css/style.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

/* Write your CSS! */
html {
  height: 100%; }

body {
  background: #e75f58;
  font-family: "proxima-nova",sans-serif;
  font-size: 16px;
  color: rgba(255, 255, 255, 0.8);
  font-weight: 500; }
  @media screen and (max-width: 480px) {
    body {
      font-size: 14px; } }

h1, h2, h3, h4, h5, h6 {
  color: #fff;
  font-weight: 500;
  font-family: "jubilat",sans-serif; }

a {
  color: white;
  text-decoration: none;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2); }

.twitter-follow-button {
  position: absolute;
  top: 1em;
  display: none;
  right: 0.5em; }

header {
  width: 100%;
  padding: 3.5em 0; }
  header > div {
    padding-left: 20px;
    padding-right: 20px;
    *zoom: 1;
    max-width: 41.25em;
    margin-left: auto;
    margin-right: auto;
    margin: 0 auto;
    position: relative; }
    header > div:before, header > div:after {
      content: " ";
      display: table; }
    header > div:after {
      clear: both; }
    header > div h2 {
      font-size: 2em;
      color: rgba(255, 255, 255, 0.8);
      margin-bottom: 0;
      padding-bottom: 0; }
      header > div h2 span {
        color: white;
        text-shadow: 0 3px 0 rgba(0, 0, 0, 0.15); }
    header > div p {
      color: rgba(255, 255, 255, 0.8);
      font-size: 1.2em;
      line-height: 1.4em; }
      header > div p span {
        color: white; }

.project {
  *zoom: 1;
  max-width: 41.25em;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.5em; }
  .project:before, .project:after {
    content: " ";
    display: table; }
  .project:after {
    clear: both; }
  .project .image_area {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 40.29137%; }
    .project .image_area:last-child {
      margin-right: 0; }
    .project .image_area img {
      max-width: 95%;
      border-radius: 8px;
      box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.1); }
  .project .description {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 57.35098%; }
    .project .description:last-child {
      margin-right: 0; }
    .project .description p {
      margin-top: 0.5em; }
    .project .description dl {
      color: white;
      font-size: 1.1em;
      margin-bottom: 0;
      padding-bottom: 0; }
      .project .description dl dt {
        float: left;
        font-weight: bold;
        margin-right: 0.5em; }
    .project .description h4 {
      margin-top: 0;
      padding-top: 0;
      font-family: "proxima-nova", sans-serif;
      font-weight: bold;
      font-size: 1.5em;
      margin-bottom: 0;
      position: relative;
      padding-right: 120px;
      word-wrap: break-word; }
      .project .description h4 a, .project .description h4 a:visited {
        position: absolute;
        right: 0;
        top: 0;
        background: #e75f58;
        padding: 5px 10px;
        border: none;
        border-radius: 5px;
        box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.1);
        font-size: 0.75em;
        color: white;
        -webkit-transition: all 100ms ease-in-out;
        -moz-transition: all 100ms ease-in-out;
        -ms-transition: all 100ms ease-in-out;
        -o-transition: all 100ms ease-in-out;
        transition: all 100ms ease-in-out; }
        .project .description h4 a:hover, .project .description h4 a:focus, .project .description h4 a:visited:hover, .project .description h4 a:visited:focus {
          background: #ed7f77;
          color: white; }
        .project .description h4 a:active, .project .description h4 a:visited:active {
          position: relative;
          top: 1px;
          background: #d1574c;
          box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1); }
  @media screen and (max-width: 480px) {
    .project .image_area {
      display: block;
      float: left;
      margin-right: 4.82916%;
      width: 100%; }
      .project .image_area:last-child {
        margin-right: 0; }
      .project .image_area img {
        max-width: 100%;
        margin-bottom: 1em; }
    .project .description {
      display: block;
      float: left;
      margin-right: 4.82916%;
      width: 100%;
      margin-bottom: 1em;
      padding-bottom: 1em;
      border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
      .project .description:last-child {
        margin-right: 0; } }

.count, .s_project {
  display: block;
  border-bottom: none;
  text-align: center;
  display: block;
  float: left;
  margin-right: 2.35765%;
  width: 31.76157%;
  margin-bottom: 1em; }
  .count:last-child, .s_project:last-child {
    margin-right: 0; }
  .count:nth-child(4n), .s_project:nth-child(4n) {
    margin-right: 0; }
  .count:hover img, .count:focus img, .s_project:hover img, .s_project:focus img {
    position: relative;
    top: -2px;
    box-shadow: 0px 6px 0px rgba(0, 0, 0, 0.35); }
  .count:active img, .s_project:active img {
    top: 2px;
    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.35); }
  .count h4, .s_project h4 {
    font-size: 1.2em;
    text-align: center;
    margin-top: 0.7em;
    margin-bottom: 0;
    padding-bottom: 0; }
  .count p, .s_project p {
    margin-top: 0.5em; }
    .count p .status, .s_project p .status {
      font-weight: bold; }
  .count img, .s_project img {
    -webkit-transition: all 80ms ease-in-out;
    -moz-transition: all 80ms ease-in-out;
    -ms-transition: all 80ms ease-in-out;
    -o-transition: all 80ms ease-in-out;
    transition: all 80ms ease-in-out;
    max-width: 100%;
    border-radius: 4px;
    box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.15); }

.s_project img {
  -webkit-transition: all 200ms ease-in-out;
  -moz-transition: all 200ms ease-in-out;
  -ms-transition: all 200ms ease-in-out;
  -o-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  max-width: 100%;
  border-radius: 4px;
  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.15); }
.s_project h4 {
  text-align: left; }
/* ... */

